--- a/TheUltimateFactsGame/FactsGame/src/main/res/values/strings.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="score_points">Score Points</string>
     <string name="build_up_streaks">Build Up Streaks</string>
     <string name="title_activity_game">Play Facts Game</string>
-    <string name="how_to_play_desc">The objective of the game is to answer as many questions correctly in 99 seconds.</string>
+    <string name="how_to_play_desc">The objective of the game is to answer as many questions correctly in 99 seconds and to have fun.</string>
     <string name="score_points_desc">Each question you answer correctly increases your score by 5.</string>
     <string name="build_up_streaks_desc_one">The more questions you answer correctly in a row increases your current streak which gives you a better score.</string>
     <string name="build_up_streaks_desc_two">Each correct answer is multiplied by your current streak.</string>
