--- a/TheUltimateFactsGame/FactsGame/src/main/res/values/strings.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">The Ultimate Facts Game</string>
+    <string name="app_name">Facts Game</string>
     <string name="app_title">The Ultimate\nFacts Game</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
